--- a/app.html
+++ b/app.html
@@ -15,6 +15,7 @@ charset=iso-8859-1" />
 
 <script type="text/javascript">
 window.fbAsyncInit = function() {
+// this may perform better if we set the size
 //FB.Canvas.setAutoGrow();
 FB.Canvas.setSize({ width: 810, height: 1200 });
 }
